Update snapshot isolation check